--- a/starter_code/Makefile
+++ b/starter_code/Makefile
@@ -3,6 +3,7 @@
 
 CC = gcc -c
 SHELL = /bin/bash
+LIBS = -lm
 
 # compiling flags here
 CFLAGS = -Wall -I.
@@ -27,7 +28,7 @@ TARGET:	$(OBJDIR) $(CLIENT)	$(SERVER)
 
 
 $(CLIENT):	$(CLIENT_OBJECTS)
-	$(LINKER)  $@  $(CLIENT_OBJECTS)
+	$(LINKER)  $@  $(CLIENT_OBJECTS) $(LIBS)
 	@echo "Link complete!"
 
 $(SERVER): $(SERVER_OBJECTS)
